tests/y.output
Grammaire

    0 $accept: e $end

    1 e: e PLUS e1
    2  | e MOINS e1
    3  | e1

    4 e1: e1 MULT e2
    5   | e1 DIV e2
    6   | e2

    7 e2: PO e PF
    8   | CSTE_ENTIERE


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
PLUS (258) 1
MOINS (259) 2
MULT (260) 4
DIV (261) 5
PO (262) 7
PF (263) 7
CSTE_ENTIERE (264) 8


Non-terminaux, suivis des règles où ils apparaissent

$accept (10)
    à gauche: 0
e (11)
    à gauche: 1 2 3, à droite: 0 1 2 7
e1 (12)
    à gauche: 4 5 6, à droite: 1 2 3 4 5
e2 (13)
    à gauche: 7 8, à droite: 4 5 6


État 0

    0 $accept: . e $end

    PO            décalage et aller à l'état 1
    CSTE_ENTIERE  décalage et aller à l'état 2

    e   aller à l'état 3
    e1  aller à l'état 4
    e2  aller à l'état 5


État 1

    7 e2: PO . e PF

    PO            décalage et aller à l'état 1
    CSTE_ENTIERE  décalage et aller à l'état 2

    e   aller à l'état 6
    e1  aller à l'état 4
    e2  aller à l'état 5


État 2

    8 e2: CSTE_ENTIERE .

    $défaut  réduction par utilisation de la règle 8 (e2)


État 3

    0 $accept: e . $end
    1 e: e . PLUS e1
    2  | e . MOINS e1

    $end   décalage et aller à l'état 7
    PLUS   décalage et aller à l'état 8
    MOINS  décalage et aller à l'état 9


État 4

    3 e: e1 .
    4 e1: e1 . MULT e2
    5   | e1 . DIV e2

    MULT  décalage et aller à l'état 10
    DIV   décalage et aller à l'état 11

    $défaut  réduction par utilisation de la règle 3 (e)


État 5

    6 e1: e2 .

    $défaut  réduction par utilisation de la règle 6 (e1)


État 6

    1 e: e . PLUS e1
    2  | e . MOINS e1
    7 e2: PO e . PF

    PLUS   décalage et aller à l'état 8
    MOINS  décalage et aller à l'état 9
    PF     décalage et aller à l'état 12


État 7

    0 $accept: e $end .

    $défaut  accepter


État 8

    1 e: e PLUS . e1

    PO            décalage et aller à l'état 1
    CSTE_ENTIERE  décalage et aller à l'état 2

    e1  aller à l'état 13
    e2  aller à l'état 5


État 9

    2 e: e MOINS . e1

    PO            décalage et aller à l'état 1
    CSTE_ENTIERE  décalage et aller à l'état 2

    e1  aller à l'état 14
    e2  aller à l'état 5


État 10

    4 e1: e1 MULT . e2

    PO            décalage et aller à l'état 1
    CSTE_ENTIERE  décalage et aller à l'état 2

    e2  aller à l'état 15


État 11

    5 e1: e1 DIV . e2

    PO            décalage et aller à l'état 1
    CSTE_ENTIERE  décalage et aller à l'état 2

    e2  aller à l'état 16


État 12

    7 e2: PO e PF .

    $défaut  réduction par utilisation de la règle 7 (e2)


État 13

    1 e: e PLUS e1 .
    4 e1: e1 . MULT e2
    5   | e1 . DIV e2

    MULT  décalage et aller à l'état 10
    DIV   décalage et aller à l'état 11

    $défaut  réduction par utilisation de la règle 1 (e)


État 14

    2 e: e MOINS e1 .
    4 e1: e1 . MULT e2
    5   | e1 . DIV e2

    MULT  décalage et aller à l'état 10
    DIV   décalage et aller à l'état 11

    $défaut  réduction par utilisation de la règle 2 (e)


État 15

    4 e1: e1 MULT e2 .

    $défaut  réduction par utilisation de la règle 4 (e1)


État 16

    5 e1: e1 DIV e2 .

    $défaut  réduction par utilisation de la règle 5 (e1)
